# swx-api

./: .env.example  .gitignore  Dockerfile  README.md  deployment.md  development.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml  release.md
.chainlit/: config.toml
migrations/: env.py
migrations/versions/: 105a5ba553bd_rename_user_table_to_users_and_add_.py  7997f79106f4_add_pgai_and_pgvector_extensions.py  a3b0fbc291c4_init_table_for_all_the_core_model.py  c8216b666f9e_create_chainlit_tables_threads_steps_.py  cbd2b33666b6_migration_for_model_qaarticle.py  d10c894cceb1_migration_for_model_create_pgai_.py
scripts/: chainlit_app.py  format.sh  lint.sh  prestart.sh  test.sh
swx_api/app/controllers/: qa_article_controller.py
swx_api/app/models/: qa_article.py  qa_chunk.py
swx_api/app/repositories/: qa_article_repository.py
swx_api/app/routes/: qa_article_route.py
swx_api/app/services/: qa_article_service.py
swx_api/core/: background_task.py  main.py  router.py
swx_api/core/cli/: main.py
swx_api/core/cli/commands/: db.py  format.py  lint.py  make.py  make_template.py  resource_templates.py  test.py  tinker.py
swx_api/core/config/: settings.py  social_settings.py
swx_api/core/controllers/: auth_controller.py  language_controller.py  user_controller.py
swx_api/core/database/: db.py  db_seed.py  db_setup.py  languages.json
swx_api/core/email/: email_service.py  email_templates.py
swx_api/core/middleware/: cors_middleware.py  logging_middleware.py  sentry_middleware.py  session_middleware.py
swx_api/core/models/: base.py  common.py  language.py  refresh_token.py  token.py  user.py
swx_api/core/repositories/: language_repository.py  token_repository.py  user_repository.py
swx_api/core/routes/access/: auth_route.py  oauth_route.py
swx_api/core/routes/admin/: user_route.py
swx_api/core/routes/user/: user_route.py
swx_api/core/routes/utils/: language_route.py
swx_api/core/security/: dependencies.py  password_security.py  refresh_token_service.py
swx_api/core/services/: auth_service.py  language_service.py  user_service.py
swx_api/core/tests/controllers/: test_auth_controller.py  test_language_controller.py  test_user_controller.py
swx_api/core/tests/misc/: test_auth_middleware.py  test_database_connection.py  test_password_security.py  test_refresh_token_service.py
swx_api/core/tests/models/: test_language_models.py  test_refresh_token_models.py  test_token_models.py  test_user_models.py
swx_api/core/tests/repositories/: test_language_repository.py  test_refresh_token.py  test_user_auth.py
swx_api/core/tests/routes/: test_auth_routes.py  test_language_routes.py  test_oauth_routes.py  test_user_profile_routes.py
swx_api/core/tests/services/: test_auth_service.py  test_language_service.py  test_user_service.py
swx_api/core/utils/: helper.py  language_helper.py  loader.py  model.py
